<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/weiß">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/image_Einstellungen"

            android:layout_width="50dp"
            android:layout_height="40dp"

            android:contentDescription="@string/einstellungen"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/einstellungen" />

        <ImageView
            android:id="@+id/image_KalenderBild"

            android:layout_width="50dp"
            android:layout_height="40dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/leererText"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/aktuellertag" />

        <TextView
            android:id="@+id/txt_Kalender_HeutigerTag"

            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"

            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_Kalender_Monat"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/btn_Kalender_Zuvor"
            android:layout_toStartOf="@id/btn_Kalender_Weiter"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"

            android:background="@color/grau"
            android:padding="7dp"

            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_Kalender_Zuvor"

            android:layout_width="wrap_content"
            android:layout_height="35dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:background="@color/grau"

            android:text="@string/zuvor"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_Kalender_Weiter"

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:background="@color/grau"

            android:text="@string/weiter"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"
            android:gravity="center"/>

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/trennbalken"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/grau">

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/layout_Kalender_Wochentage"

        android:layout_width="match_parent"
        android:layout_height="30dp"

        android:layout_margin="10dp"
        android:background="@color/grau"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_Kalender_Mo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/montag"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Kalender_Di"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/dienstag"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Kalender_Mi"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/mittwoch"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Kalender_Do"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/donnerstag"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Kalender_Fr"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/freitag"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Kalender_Sa"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/samstag"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_Kalender_So"

            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:gravity="center_horizontal"
            android:text="@string/sonntag"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <GridView
        android:id="@+id/gridView_Kalender_Tabelle_AktuellerMonat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:numColumns="7">

    </GridView>


    <TextView
        android:id="@+id/txt_Kalender_Momentanes_Datum"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/grau"

        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <ImageView
        android:id="@+id/image_neuerTermin"

        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"

        android:contentDescription="@string/neuerTermin"
        android:gravity="center"

        app:srcCompat="@drawable/button_plus"/>



</LinearLayout>